--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -23,6 +25,9 @@
         </activity>
         <activity android:name=".ui.PantallaIniciarSesion"></activity>
         <activity android:name=".ui.PantallaCrearCuenta"></activity>
+        <activity android:name=".ui.PantallaConnections"></activity>
+        <activity android:name=".ui.PantallaConnection"></activity>
+        <activity android:name=".ui.PantallaCrearConnection"></activity>
     </application>
 
 </manifest>
